--- a/doc/cha-programs.texi
+++ b/doc/cha-programs.texi
@@ -85,7 +85,7 @@ To connect to a server using PSK authentication, you need to enable
 the choice of PSK by using a cipher priority parameter such as in the
 example below.
 
-@smallexample
+@example
 $ ./gnutls-cli -p 5556 localhost --pskusername psk_identity \
   --pskkey 88f3824b3e5659f52d00e959bacab954b6540344 \
   --priority NORMAL:-KX-ALL:+ECDHE-PSK:+DHE-PSK:+PSK
@@ -100,7 +100,7 @@ Connecting to '127.0.0.1:5556'...
 - Handshake was completed
 
 - Simple Client Mode:
-@end smallexample
+@end example
 
 By keeping the @code{--pskusername} parameter and removing the
 @code{--pskkey} parameter, it will query only for the password during
@@ -179,16 +179,16 @@ use @code{gnutls-serv} as a simple HTTPS server.
 
 The most basic server can be started as:
 
-@smallexample
+@example
 gnutls-serv --http
-@end smallexample
+@end example
 
 It will only support anonymous ciphersuites, which many TLS clients
 refuse to use.
 
 The next step is to add support for X.509.  First we generate a CA:
 
-@smallexample
+@example
 $ certtool --generate-privkey > x509-ca-key.pem
 $ echo 'cn = GnuTLS test CA' > ca.tmpl
 $ echo 'ca' >> ca.tmpl
@@ -196,7 +196,7 @@ $ echo 'cert_signing_key' >> ca.tmpl
 $ certtool --generate-self-signed --load-privkey x509-ca-key.pem \
   --template ca.tmpl --outfile x509-ca.pem
 ...
-@end smallexample
+@end example
 
 Then generate a server certificate.  Remember to change the dns_name
 value to the name of your server host, or skip that command to avoid
@@ -235,15 +235,15 @@ To be able to import the client key/certificate into some
 applications, you will need to convert them into a PKCS#12 structure.
 This also encrypts the security sensitive key with a password.
 
-@smallexample
+@example
 $ certtool --to-p12 --load-ca-certificate x509-ca.pem \
   --load-privkey x509-client-key.pem --load-certificate x509-client.pem \
   --outder --outfile x509-client.p12
-@end smallexample
+@end example
 
 For icing, we'll create a proxy certificate for the client too.
 
-@smallexample
+@example
 $ certtool --generate-privkey > x509-proxy-key.pem
 $ echo 'cn = GnuTLS test client proxy' > proxy.tmpl
 $ certtool --generate-proxy --load-privkey x509-proxy-key.pem \
@@ -251,16 +251,16 @@ $ certtool --generate-proxy --load-privkey x509-proxy-key.pem \
   --load-certificate x509-client.pem --template proxy.tmpl \
   --outfile x509-proxy.pem
 ...
-@end smallexample
+@end example
 
 Then start the server again:
 
-@smallexample
+@example
 $ gnutls-serv --http \
             --x509cafile x509-ca.pem \
             --x509keyfile x509-server-key.pem \
             --x509certfile x509-server.pem
-@end smallexample
+@end example
 
 Try connecting to the server using your web browser.  Note that the
 server listens to port 5556 by default.
@@ -269,62 +269,62 @@ While you are at it, to allow connections using DSA, you can also
 create a DSA key and certificate for the server.  These credentials
 will be used in the final example below.
 
-@smallexample
+@example
 $ certtool --generate-privkey --dsa > x509-server-key-dsa.pem
 $ certtool --generate-certificate --load-privkey x509-server-key-dsa.pem \
   --load-ca-certificate x509-ca.pem --load-ca-privkey x509-ca-key.pem \
   --template server.tmpl --outfile x509-server-dsa.pem
 ...
-@end smallexample
+@end example
 
 The next step is to create OpenPGP credentials for the server.
 
-@smallexample
+@example
 gpg --gen-key
 ...enter whatever details you want, use 'test.gnutls.org' as name...
-@end smallexample
+@end example
 
 Make a note of the OpenPGP key identifier of the newly generated key,
 here it was @code{5D1D14D8}.  You will need to export the key for
 GnuTLS to be able to use it.
 
-@smallexample
+@example
 gpg -a --export 5D1D14D8 > openpgp-server.txt
 gpg --export 5D1D14D8 > openpgp-server.bin
 gpg --export-secret-keys 5D1D14D8 > openpgp-server-key.bin
 gpg -a --export-secret-keys 5D1D14D8 > openpgp-server-key.txt
-@end smallexample
+@end example
 
 Let's start the server with support for OpenPGP credentials:
 
-@smallexample
+@example
 gnutls-serv --http \
             --pgpkeyfile openpgp-server-key.txt \
             --pgpcertfile openpgp-server.txt
-@end smallexample
+@end example
 
 The next step is to add support for SRP authentication. This requires
 an SRP password file (see @ref{Invoking srptool}).
 To start the server with SRP support:
 
-@smallexample
+@example
 gnutls-serv --http \
             --srppasswdconf srp-tpasswd.conf \
             --srppasswd srp-passwd.txt
-@end smallexample
+@end example
 
 Let's also start a server with support for PSK. This would require
 a password file created with @code{psktool} (see @ref{Invoking psktool}).
 
-@smallexample
+@example
 gnutls-serv --http \
             --pskpasswd psk-passwd.txt
-@end smallexample
+@end example
 
 Finally, we start the server with all the earlier parameters and you
 get this command:
 
-@smallexample
+@example
 gnutls-serv --http \
             --x509cafile x509-ca.pem \
             --x509keyfile x509-server-key.pem \
@@ -336,7 +336,7 @@ gnutls-serv --http \
             --srppasswdconf srp-tpasswd.conf \
             --srppasswd srp-passwd.txt \
             --pskpasswd psk-passwd.txt
-@end smallexample
+@end example
 
 
 @node The gnutls-cli-debug tool
