--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ See the end for copying conditions.
 ** gnutls-cli/serv: Set don't fragment bit in DTLS sessions
 in Linux as well as in BSD.
 
+** gnutls-cli: Fixed reading from windows terminals.
+
 ** libgnutls: When GNUTLS_OPENPGP_FMT_BASE64 is specified
 the stream is assumed to be base64 encoded (previously
 the encoding was auto-detected). This avoids a decoding
