--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.0.10 (unreleased)
+* Version 3.0.10 (released 2012-01-04)
 
 ** gnutls-cli/serv: Set don't fragment bit in DTLS sessions
 in Linux as well as in BSD.
